--- a/apps/files/css/mobile.scss
+++ b/apps/files/css/mobile.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: $breakpoint-mobile) {
+@media only screen and (max-width: 938px) and (min-width: $breakpoint-mobile + 1), only screen and (max-width: 688px) {
 
 .app-files #app-content.dir-drop{
 	background-color: rgba(255, 255, 255, 1)!important;
