--- a/apps/files/css/mobile.scss
+++ b/apps/files/css/mobile.scss
@@ -1,3 +1,6 @@
+/* 938 = table min-width(688) + app-navigation width: 250
+   $breakpoint-mobile +1 = size where app-navigation is hidden +1
+   688 = table min-width */
 @media only screen and (max-width: 938px) and (min-width: $breakpoint-mobile + 1), only screen and (max-width: 688px) {
 
 .app-files #app-content.dir-drop{
